# Q_Alpha

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PLAN_OPS_LAYER.md  Q_alpha.md  README.md  STRATEGY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  paper.yml
data/autopilot/: adaptive_track.csv  baseline_book.json  books.json  ledger.json  manual_injections.json  pending_injections.json  state.json  system_flows.json  system_track.csv
data/events/: governance_events.csv
data/paper/: adaptive_book.json  alert_state.json  book.json  run_log.jsonl  shadow_book.json
data/universes/: README.md  nifty100_current_static.csv  nifty50_membership.csv  nifty50_membership_2026.csv
deploy/: DEPLOY.md  DEPLOY_AWS_BEGINNER.md  DEPLOY_LIGHTNING.md  DEPLOY_STREAMLIT.md  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: PREREGISTRATION_autopilot.md
reports/: PHASE0_VERDICT.md  PREREGISTRATION_universe.md  ai_brief.md  autopilot_dashboard.md  paper_dashboard.md  paper_equity.csv  phase0_pit_annual_report.md  phase0_pit_report.md  phase0_report.md  phase0_static0a_report.md  universe_breadth_findings.md  universe_nifty100_screen.md
scripts/: advisor.py  ai_brief.py  autopilot.py  build_nifty100_watchlist.py  build_nifty_universe.py  build_static_universe.py  calibrate_gate.py  dashboard_app.py  exp_breadth.py  exp_frequency_lookback.py  exp_universe_breadth.py  holdout_2025.py  paper.py  quantum_benchmark.py  quantum_demo.py  reconcile_taxpnl.py  replay.py  run_phase0.py  satellite.py  scan_alerts.py  walkforward.py
src/qalpha/: __init__.py  config.py
src/qalpha/accounting/: __init__.py  capital_gains.py  corporate_actions.py  costs.py  slippage.py  tax_lots.py
src/qalpha/alloc/: __init__.py  conditioning.py  optimizer.py  sectors.py
src/qalpha/backtest/: __init__.py  baselines.py  decision.py  defensive.py  drawdown.py  engine.py  metrics.py  portfolio.py  report.py  strategy.py
src/qalpha/data/: __init__.py  fundamentals.py  ingest.py  prices.py  universe.py
src/qalpha/factors/: __init__.py  fundamental.py  liquidity.py  momentum.py  regime.py  score.py  volatility.py
src/qalpha/live/: __init__.py  advisor.py  ai_brief.py  auth.py  autopilot.py  client.py  corporate_actions_feed.py  credentials.py  dashboard.py  deploy.py  go_scorecard.py  hedge.py  holdings.py  notify.py  paper.py  position_health.py  replay.py  runlog.py  safety.py  satellite.py  scan.py  taxpnl.py  ticker.py  tradebook.py
src/qalpha/research/: __init__.py  qaoa.py  solvers.py
tests/: conftest.py  test_advisor.py  test_ai_brief.py  test_alloc.py  test_autopilot.py  test_backtest.py  test_capital_gains.py  test_corporate_actions.py  test_costs.py  test_dashboard_app.py  test_dashboard_status.py  test_data.py  test_deploy.py  test_drawdown.py  test_factors.py  test_fundamentals.py  test_go_scorecard.py  test_hedge.py  test_holdings.py  test_live.py  test_notify.py  test_paper.py  test_portfolio_state.py  test_position_health.py  test_qaoa.py  test_qubo.py  test_replay.py  test_report.py  test_runlog.py  test_safety.py  test_satellite.py  test_scan.py  test_slippage.py  test_tax_lots.py  test_taxpnl.py  test_ticker.py  test_tradebook.py
